--- a/publications/index.html
+++ b/publications/index.html
@@ -23,7 +23,8 @@
   <link rel="alternate" type="application/rss+xml" title="High Performance Network Laboratory, University of Tehran" href="https://hpnl.ir" />
   <link rel='stylesheet' id='open-sans-css'  href='//fonts.googleapis.com/css?family=Open+Sans%3A300italic%2C400italic%2C600italic%2C300%2C400%2C600&#038;subset=latin%2Clatin-ext&#038;ver=4.2.4' type='text/css' media='all' />
   <link href='https://fonts.googleapis.com/css?family=Titillium+Web:600italic,600,400,400italic' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
+  <script src="https://kit.fontawesome.com/4d10f83d96.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
   </head>
 
 
@@ -207,28 +208,11 @@
 		</div>
 	</div>
 	<hr width="50%">
-	
+		
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 2. On the Age of Status Updates in Unreliable Multi-Source M/G/1 Queueing Systems </b>
-			</div>
-			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
-				<a>  <i class="far fa-file-pdf"></i> </a>
-			</div>
-		</div>
-		<br>
-		<div class="jornal-name">
-			<i> IEEE Communications Letters / 2022 </i>
-		</div>
-	</div>
-	<hr width="50%">
-	
-	<div class="publication"> 
-		<div>
-			<div class="paper-title">
-				<b> 3. Layer-Aware Containerized Service Orchestration in Edge Networks </b>
+				<b> 2. Layer-Aware Containerized Service Orchestration in Edge Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -245,7 +229,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 4. Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
+				<b> 3. Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -262,7 +246,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 5. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
+				<b> 4. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -279,7 +263,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 6. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
+				<b> 5. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -296,7 +280,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 7. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
+				<b> 6. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -313,7 +297,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 8. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
+				<b> 7. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -330,7 +314,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 9. Customizing clos network-on-chip for neural networks </b>
+				<b> 8. Customizing clos network-on-chip for neural networks </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -347,7 +331,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 10. Cost-effective low-delay design for multiparty cloud video conferencing </b>
+				<b> 9. Cost-effective low-delay design for multiparty cloud video conferencing </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -364,7 +348,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 11. Multiperiod network rate allocation with end-to-end delay constraints </b>
+				<b> 10. Multiperiod network rate allocation with end-to-end delay constraints </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -381,7 +365,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 12. A dummy-based approach for preserving source rate privacy </b>
+				<b> 11. A dummy-based approach for preserving source rate privacy </b>
 			</div>
 			<div class="paper-icon">
 				<a>  <i class="fas fa-university"></i> </a>
@@ -393,7 +377,23 @@
 			<i> IEEE Transactions on Information Forensics and Security 11 (6) / 2016 </i>
 		</div>
 	</div>
+	<hr width="50%">
 	
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> 12. DT-MAC: An Efficient and Scalable Medium Access Control Protocol for Wireless Networks </b>
+			</div>
+			<div class="paper-icon">
+				<a>  <i class="fas fa-university"></i> </a>
+				<a>  <i class="far fa-file-pdf"></i> </a>
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Wireless Communications / 2013 </i>
+		</div>
+	</div>
 
 
 </div>
