change dr dargahi profile link

--- a/alumni/index.html
+++ b/alumni/index.html
@@ -96,7 +96,7 @@
                 </div>
 				
                 <div class="image--cover-container">
-					<a href="https://www.salford.ac.uk/our-staff/tooska-dargahi" target="_blank">				
+					<a href="https://www.mmu.ac.uk/computing-and-maths/staff/profile/dr-tooska-dargahi" target="_blank">				
 						<img src="/images/alumni/tooska_dargahi.jpg" class="image--cover">
                     <p>Tooska Dargahi</p>
 					</a>
