--- a/publications/index.html
+++ b/publications/index.html
@@ -99,7 +99,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> in Proc. IEEE INFOCOM / 2022 </i>
+			<i> IEEE Conference on Computer Communications (INFOCOM) / 2022 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -116,7 +116,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> in Proc. PACT / 2021 </i>
+			<i> International Conference on Parallel Architectures and Compilation Techniques (PACT) / 2021 </i>
 		</div>
 	</div>
 	<hr width="50%">	
@@ -133,7 +133,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> in Proc. IEEE HPCA / 2021 </i>
+			<i> IEEE International Symposium on High-Performance Computer Architecture (HPCA) / 2021 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -150,7 +150,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> in Proc. ACM/IEEE DAC / 2019 </i>
+			<i> Proceedings of the 56th Annual Design Automation Conference (DAC) / 2019 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -167,7 +167,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> in Proc. IEEE ICDCS / 2015 </i>
+			<i> IEEE International Conference on Distributed Computing Systems (ICDCS) / 2015 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -184,7 +184,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> in Proc. IEEE INFOCOM / 2015 </i>
+			<i> IEEE Conference on Computer Communications (INFOCOM) / 2015 </i>
 		</div>
 	</div>
 		
@@ -204,7 +204,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> ACM Computing Surveys 54 (11s) / 2022 </i>
+			<i> ACM Computing Surveys / 2022 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -306,7 +306,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Vehicular Technology 69 (12) / 2020 </i>
+			<i> IEEE Transactions on Vehicular Technology / 2020 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -323,7 +323,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Computers 66 (11) / 2017 </i>
+			<i> IEEE Transactions on Computers / 2017 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -340,7 +340,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Multimedia 19 (12) / 2017 </i>
+			<i> IEEE Transactions on Multimedia / 2017 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -357,7 +357,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Control of Network Systems 5 (3) / 2017 </i>
+			<i> IEEE Transactions on Control of Network Systems / 2017 </i>
 		</div>
 	</div>
 	<hr width="50%">
@@ -374,7 +374,7 @@
 		</div>
 		<br>
 		<div class="jornal-name">
-			<i> IEEE Transactions on Information Forensics and Security 11 (6) / 2016 </i>
+			<i> IEEE Transactions on Information Forensics and Security / 2016 </i>
 		</div>
 	</div>
 	<hr width="50%">
