pf and fix headers

--- a/qip/index.html
+++ b/qip/index.html
@@ -89,6 +89,11 @@
 <!--            -->
 <!--        </li>-->
 		<li class="no-p-margin">
+            2023-01-10:  Lectures 13 was released. Check [<a href="https://hpnl.ir/qip/lectures" target="_blank">LECTURES</a>].
+            <p></p>
+
+        </li>
+		<li class="no-p-margin">
             2023-01-01: Project Final was released. Check [<a href="https://hpnl.ir/qip/projects" target="_blank">PROJECTS</a>].
             <p></p>
 
