fix lectures list

--- a/qip/lectures/index.html
+++ b/qip/lectures/index.html
@@ -120,7 +120,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/lectures/Lecture0.pdf" style="color: #0077CC"> Lecture 0</a></span><br />
 
-                <strong>#1</strong> Lecture0
+                <strong>#1</strong> Introduction
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture0.pdf">Slide</a>]
@@ -141,7 +141,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/lectures/Lecture1.pdf" style="color: #0077CC"> Lecture 1</a></span><br />
 
-                <strong>#2</strong> Lecture1
+                <strong>#2</strong> Quantum
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture1.pdf">Slide</a>]
@@ -163,7 +163,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/lectures/Lecture2.pdf" style="color: #0077CC"> Lecture 2</a></span><br />
 
-                <strong>#3</strong> Lecture2
+                <strong>#3</strong> Linear Algebra
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture2.pdf">Slide</a>]
@@ -185,7 +185,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/lectures/Lecture3.pdf" style="color: #0077CC"> Lecture 3</a></span><br />
 
-                <strong>#4</strong> Lecture3
+                <strong>#4</strong> Postulates
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture3.pdf">Slide</a>]
@@ -210,7 +210,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/lectures/Lecture4.pdf" style="color: #0077CC"> Lecture 4</a></span><br />
 
-                <strong>#5</strong> Lecture4
+                <strong>#5</strong> Important Concepts
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture4.pdf">Slide</a>]
@@ -232,7 +232,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/lectures/Lecture5.pdf" style="color: #0077CC"> Lecture 5</a></span><br />
 
-                <strong>#6</strong> Lecture5
+                <strong>#6</strong> Quantum Circuit Model
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture5.pdf">Slide</a>]
@@ -254,7 +254,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/lectures/Lecture6.pdf" style="color: #0077CC"> Lecture 6</a></span><br />
 
-                <strong>#7</strong> Lecture6
+                <strong>#7</strong> Some Applications
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture6.pdf">Slide</a>]
@@ -277,7 +277,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/lectures/Lecture7.pdf" style="color: #0077CC"> Lecture 7</a></span><br />
 
-                <strong>#8</strong> Lecture7
+                <strong>#8</strong> Deutsch-Joza
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture7.pdf">Slide</a>]
@@ -302,7 +302,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/notes/Note8.pdf" style="color: #0077CC"> Lecture 8</a></span><br />
 
-                <strong>#9</strong> Lecture8
+                <strong>#9</strong> Bernstein-Vazirani
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
 					[<a title="Download slides (pdf)" href="/qip/static_files/notes/Note8.pdf">Note</a>]
@@ -324,7 +324,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/notes/Note9.pdf" style="color: #0077CC"> Lecture 9</a></span><br />
 
-                <strong>#10</strong> Lecture9
+                <strong>#10</strong> Simon
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
 					[<a title="Download slides (pdf)" href="/qip/static_files/notes/Note9.pdf">Note</a>]
@@ -345,7 +345,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/lectures/Lecture10.pdf" style="color: #0077CC"> Lecture 10</a></span><br />
 
-                <strong>#11</strong> Lecture10
+                <strong>#11</strong> Grover
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture10.pdf">Slide</a>]
@@ -367,7 +367,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/lectures/Lecture11.pdf" style="color: #0077CC"> Lecture 11</a></span><br />
 
-                <strong>#12</strong> Lecture11
+                <strong>#12</strong> QFT+QPE
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture11.pdf">Slide</a>]
@@ -389,7 +389,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/lectures/Lecture12.pdf" style="color: #0077CC"> Lecture 12</a></span><br />
 
-                <strong>#13</strong> Lecture12
+                <strong>#13</strong> Shor
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
                     [<a title="Download slides (pdf)" href="/qip/static_files/lectures/Lecture12.pdf">Slide</a>]
@@ -411,7 +411,7 @@
             <div class="content">
                 <span><a href="/qip/static_files/notes/Note13.pdf" style="color: #0077CC"> Lecture 13</a></span><br />
 
-                <strong>#14</strong> Lecture13
+                <strong>#14</strong> Complexity
                 <br />
                 <strong style="font-size:100%; font-family: 'Titillium Web', sans-serif;">
 					[<a title="Download slides (pdf)" href="/qip/static_files/notes/Note13.pdf">Note</a>]										
