--- a/alumni/index.html
+++ b/alumni/index.html
@@ -168,7 +168,7 @@
                 </div>							
 
                 <div class="image--cover-container">
-					<a href="https://politics.exeter.ac.uk/staff/naserianhanzaei/" target="_blank">																
+					<a href="https://scholar.google.com/citations?user=rtdQWxEAAAAJ&hl=en" target="_blank">																
 						<img src="/images/alumni/elahe_naserian.jpg" class="image--cover">
                     <p>Elahe Naserian</p>
 					</a>
