--- a/pecs2022/index.html
+++ b/pecs2022/index.html
@@ -75,7 +75,7 @@
       <div class="wrapper">
 		<div class="home">
 
-    <h1> Performance Evaluation of Computer Systems <span style="font-size: 20px;color: #0006;"> Spiring 2022 </span></h1>
+    <h1> Performance Evaluation of Computer Systems <span style="font-size: 20px;color: #0006;"> Spring 2022 </span></h1>
 
     <div class="announcement-box" style="margin-top:30px">
         <h2>Announcements</h2>
