add links to publications page

--- a/publications/index.html
+++ b/publications/index.html
@@ -93,7 +93,7 @@
 				<b> 1. FlowShark: Sampling for High Flow Visibility in SDNs </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/INFOCOM48880.2022.9796658" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -110,7 +110,7 @@
 				<b> 2. X-Layer: Building Composable Pipelined Dataflows for Low-Rank Convolutions </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/PACT52795.2021.00015" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -127,7 +127,7 @@
 				<b> 3. SPAGHETTI: Streaming Accelerators for Highly Sparse GEMM on FPGAs </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/HPCA51647.2021.00017" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -144,7 +144,7 @@
 				<b> 4. Skippynn: An embedded stochastic-computing accelerator for convolutional neural networks </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://ieeexplore.ieee.org/document/8806970" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -161,7 +161,7 @@
 				<b> 5. Cost-effective low-delay cloud video conferencing </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/ICDCS.2015.19" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -178,7 +178,7 @@
 				<b> 6. On the construction of maximum-quality aggregation trees in deadline-constrained WSNs </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/INFOCOM.2015.7218386" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -198,7 +198,7 @@
 				<b> 1. Serverless Computing: A Survey of Opportunities, Challenges, and Applications </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1145/3510611" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -215,7 +215,7 @@
 				<b> 2. Layer-Aware Containerized Service Orchestration in Edge Networks </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/TNSM.2022.3217134" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -232,7 +232,7 @@
 				<b> 3. Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/TKDE.2022.3207123" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -249,7 +249,7 @@
 				<b> 4. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/TNSM.2022.3146971" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -266,7 +266,7 @@
 				<b> 5. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/TNSM.2022.3149734" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -283,7 +283,7 @@
 				<b> 6. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/TC.2022.3141841" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -300,7 +300,7 @@
 				<b> 7. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/TVT.2020.3031662" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -317,7 +317,7 @@
 				<b> 8. Customizing clos network-on-chip for neural networks </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/TC.2017.2715158" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -334,7 +334,7 @@
 				<b> 9. Cost-effective low-delay design for multiparty cloud video conferencing </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/TMM.2017.2710799" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -351,7 +351,7 @@
 				<b> 10. Multiperiod network rate allocation with end-to-end delay constraints </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/TCNS.2017.2677202" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -368,7 +368,7 @@
 				<b> 11. A dummy-based approach for preserving source rate privacy </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/TIFS.2016.2515050" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
@@ -385,7 +385,7 @@
 				<b> 12. DT-MAC: An Efficient and Scalable Medium Access Control Protocol for Wireless Networks </b>
 			</div>
 			<div class="paper-icon">
-				<a>  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1109/TWC.2012.010913.120698" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
