fix papers link

--- a/publications/index.html
+++ b/publications/index.html
@@ -144,7 +144,7 @@
 				<b> 4. Skippynn: An embedded stochastic-computing accelerator for convolutional neural networks </b>
 			</div>
 			<div class="paper-icon">
-				<a href="https://ieeexplore.ieee.org/document/8806970" target="_blank">  <i class="fas fa-university"></i> </a>
+				<a href="https://doi.org/10.1145/3316781.3317911" target="_blank">  <i class="fas fa-university"></i> </a>
 				<a>  <i class="far fa-file-pdf"></i> </a>
 			</div>
 		</div>
