--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -172,6 +172,11 @@
 							<img src="/pecs2023/images/people/mina_faridi.jpg" class="image--cover">
 							<p>Mina Faridi</p>
 						</div>	
+						
+						<div class="image--cover-container">
+							<img src="/pecs2023/images/people/amirhossein_mehrvarz.jpg" class="image--cover">
+							<p>AmirHossein Mehrvarz</p>
+						</div>							
             </div>		
         </div>		
 	
