elearn4 changed to elearn

--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -91,17 +91,17 @@
 <!--        </li>-->
 
         <li class="no-p-margin">
-          2023-02-17: Notes about Classwork assignments are provided in the Classwork Notes file. Check [<a href="https://elearn4.ut.ac.ir/" target="_blank">ELEARN</a>].
+          2023-02-17: Notes about Classwork assignments are provided in the Classwork Notes file. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
             <p></p>
         </li>
 
         <li class="no-p-margin">
-          2023-02-06: The second session on Tuesday, February 7 will be held. Check [<a href="https://elearn4.ut.ac.ir/" target="_blank">ELEARN</a>].
+          2023-02-06: The second session on Tuesday, February 7 will be held. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
             <p></p>
         </li>
 
         <li class="no-p-margin">
-          2023-02-04: The first session on Sunday, February 5 will be held. Check [<a href="https://elearn4.ut.ac.ir/" target="_blank">ELEARN</a>].
+          2023-02-04: The first session on Sunday, February 5 will be held. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
             <p></p>
         </li>
 
