new announcement added

--- a/pecs2023/index.html
+++ b/pecs2023/index.html
@@ -91,6 +91,11 @@
 <!--        </li>-->
 
         <li class="no-p-margin">
+          2023-02-19: Tuesday, February 21 session poll added. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
+            <p></p>
+        </li>
+
+        <li class="no-p-margin">
           2023-02-17: Notes about Classwork assignments are provided in the Classwork Notes file. Check [<a href="https://elearn.ut.ac.ir/" target="_blank">ELEARN</a>].
             <p></p>
         </li>
