schedule and lectures updated

--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -102,80 +102,82 @@
 <!--                </li>-->
 
            <li class="table-row table-row-lecture">
+                <div class="col col-1" data-label="Event">Introduction</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-02-05
+                    <br class="date-spliter"/>Sunday
+                </div>
+                <div class="col col-2" data-label="Description">Course Syllabus, Outlines
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/lectures/Lecture0.pdf">Syllabus</a>]
+                    [<a href="/pecs2023/static_files/lectures/lect001-intro performance-course-outline.pdf">lect01-Intro</a>]
+
+              </div>
+            </li>
+
+
+             <li class="table-row table-row-lecture">
                 <div class="col col-1" data-label="Event">Lecture1</div>
                 <div class="col col-1-2" data-label="Date">
-                    Date
-                    <br class="date-spliter"/>Day
+                    2023-02-07
+                    <br class="date-spliter"/>Tuesday
                 </div>
                 <div class="col col-2" data-label="Description">
                     Reminder of Probability
                     <br />
                 </div>
                 <div class="col col-4" data-label="Course Material">
-                    [<a href="#">lect01-prob-1-24</a>]
+                    [<a href="/pecs2023/static_files/lectures/lect01 prob.pdf">lect01-Prob</a>]
+              </div>
+            </li>
+
+             <li class="table-row table-row-lecture">
+                <div class="col col-1" data-label="Event">Lecture1</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-02-12
+                    <br class="date-spliter"/>Sunday
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Reminder of Probability
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/lectures/lect01 prob.pdf">lect01-Prob</a>]
+              </div>
+            </li>
+
+             <li class="table-row table-row-lecture">
+                <div class="col col-1" data-label="Event">Lecture2</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-02-14
+                    <br class="date-spliter"/>Tuesday
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Reminder of Random Variables I
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/lectures/lect02-RV1.pdf">lect02-RV1</a>]
               </div>
             </li>
 
             <li class="table-row table-row-lecture">
-                <div class="col col-1" data-label="Event">Lecture1</div>
-                <div class="col col-1-2" data-label="Date">
-                    Date
-                    <br class="date-spliter"/>Day
-                </div>
-                <div class="col col-2" data-label="Description">
-                    Reminder of Probability
-                    <br />
-                </div>
-                <div class="col col-4" data-label="Course Material">
-                    [<a href="#">lect01-prob-25-40</a>]
-              </div>
-            </li>
-
-             <li class="table-row table-row-lecture">
                 <div class="col col-1" data-label="Event">Lecture2</div>
                 <div class="col col-1-2" data-label="Date">
-                    Date
-                    <br class="date-spliter"/>Day
+                    2023-02-19
+                    <br class="date-spliter"/>Sunday
                 </div>
                 <div class="col col-2" data-label="Description">
-                    Reminder of Random Variables
+                    Reminder of Random Variables I
                     <br />
                 </div>
                 <div class="col col-4" data-label="Course Material">
-                    [<a href="#">lect02-RV-1-20</a>]
+                    [<a href="/pecs2023/static_files/lectures/lect02-RV1.pdf">lect02-RV1</a>]
               </div>
             </li>
-
-             <li class="table-row table-row-lecture">
-                <div class="col col-1" data-label="Event">Lecture2</div>
-                <div class="col col-1-2" data-label="Date">
-                    Date
-                    <br class="date-spliter"/>Day
-                </div>
-                <div class="col col-2" data-label="Description">
-                    Reminder of Random Variables
-                    <br />
-                </div>
-                <div class="col col-4" data-label="Course Material">
-                    [<a href="#">lect02-RV-21-38</a>]
-              </div>
-            </li>
-
-             <li class="table-row table-row-lecture">
-                <div class="col col-1" data-label="Event">Lecture2</div>
-                <div class="col col-1-2" data-label="Date">
-                    Date
-                    <br class="date-spliter"/>Day
-                </div>
-                <div class="col col-2" data-label="Description">
-                    Reminder of Random Variables
-                    <br />
-                </div>
-                <div class="col col-4" data-label="Course Material">
-                    [<a href="#">lect02-RV-39-55</a>]
-              </div>
-            </li>
-			
+			<!--
               <li class="table-row table-row-assignment">
                   <div class="col col-1" data-label="Event">Class Assignment</div>
                   <div class="col col-1-2" data-label="Date">
@@ -582,6 +584,8 @@
                   -
               </div>
             </li>
+                -->
+
 
             </ul>
           </div>
