some updates were made in the pecs

--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -177,6 +177,22 @@
                     [<a href="/pecs2023/static_files/lectures/lect02-RV1.pdf">lect02-RV1</a>]
               </div>
             </li>
+
+            <li class="table-row table-row-quiz">
+                <div class="col col-1" data-label="Event">Quiz</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-02-26
+                    <br class="date-spliter"/>February
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Quiz 1 
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                  [<a href="#"></a>]
+                </div>
+            </li>
+
 			<!--
               <li class="table-row table-row-assignment">
                   <div class="col col-1" data-label="Event">Class Assignment</div>
