quiz1 and homework1 added

--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -178,6 +178,21 @@
               </div>
             </li>
 
+            <li class="table-row table-row-lecture">
+                <div class="col col-1" data-label="Event">Lecture2</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-02-21
+                    <br class="date-spliter"/>Tuesday
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Reminder of Random Variables II
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/lectures/lect02-RV2.pdf">lect02-RV2</a>]
+              </div>
+            </li>
+
             <li class="table-row table-row-quiz">
                 <div class="col col-1" data-label="Event">Quiz</div>
                 <div class="col col-1-2" data-label="Date">
@@ -189,8 +204,39 @@
                     <br />
                 </div>
                 <div class="col col-4" data-label="Course Material">
-                  [<a href="#"></a>]
+                    [<a href="/pecs2023/static_files/quiz/Q1.pdf">Quiz_1</a>]
                 </div>
+            </li>
+
+            <li class="table-row table-row-assignment">
+                <div class="col col-1" data-label="Event">Homework</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-02-25
+                    <br class="date-spliter"/>Saturday
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Homework 1
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/homework/HW1.pdf">HW1</a>]
+                </div>
+            </li>	
+
+
+            <li class="table-row table-row-lecture">
+                <div class="col col-1" data-label="Event">Lecture2</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-02-28
+                    <br class="date-spliter"/>Sunday
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Reminder of Random Variables II
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/lectures/lect02-RV2.pdf">lect02-RV2</a>]
+              </div>
             </li>
 
 			<!--
