--- a/publications/index.html
+++ b/publications/index.html
@@ -195,7 +195,24 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 1. Serverless Computing: A Survey of Opportunities, Challenges, and Applications </b>
+				<b> 1. A Generalized Residue Number System Design Approach for Ultra-Low Power Arithmetic Circuits Based on Deterministic Bit-streams </b>
+			</div>
+			<div class="paper-icon">
+				<a href="https://doi.org/10.1109/TCAD.2023.3250603" target="_blank">  <i class="fas fa-university"></i> </a>
+				<a>  <i class="far fa-file-pdf"></i> </a>
+			</div>
+		</div>
+		<br>
+		<div class="jornal-name">
+			<i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems / 2023 </i>
+		</div>
+	</div>
+	<hr width="50%">
+
+	<div class="publication"> 
+		<div>
+			<div class="paper-title">
+				<b> 2. Serverless Computing: A Survey of Opportunities, Challenges, and Applications </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1145/3510611" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -212,7 +229,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 2. Layer-Aware Containerized Service Orchestration in Edge Networks </b>
+				<b> 3. Layer-Aware Containerized Service Orchestration in Edge Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TNSM.2022.3217134" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -229,7 +246,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 3. Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
+				<b> 4. Co-Evolution of Viral Processes and Structural Stability in Signed Social Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TKDE.2022.3207123" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -246,7 +263,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 4. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
+				<b> 5. Minimizing Update Makespan in SDNs without TCAM Overhead </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TNSM.2022.3146971" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -263,7 +280,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 5. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
+				<b> 6. Monitoring OpenFlow Virtual Networks via Coordinated Switch-Based Traffic Mirroring </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TNSM.2022.3149734" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -280,7 +297,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 6. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
+				<b> 7. Stereo: Assignment and Scheduling in MPSoC under Process Variation by Combining Stochastic and Decomposition Approaches </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TC.2022.3141841" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -297,7 +314,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 7. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
+				<b> 8. Stability region and delay analysis of a SWIPT-based two-way relay network with opportunistic network coding </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TVT.2020.3031662" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -314,7 +331,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 8. Customizing clos network-on-chip for neural networks </b>
+				<b> 9. Customizing clos network-on-chip for neural networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TC.2017.2715158" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -331,7 +348,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 9. Cost-effective low-delay design for multiparty cloud video conferencing </b>
+				<b> 10. Cost-effective low-delay design for multiparty cloud video conferencing </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TMM.2017.2710799" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -348,7 +365,7 @@
 		<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 10. Multiperiod network rate allocation with end-to-end delay constraints </b>
+				<b> 11. Multiperiod network rate allocation with end-to-end delay constraints </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TCNS.2017.2677202" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -365,7 +382,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 11. A dummy-based approach for preserving source rate privacy </b>
+				<b> 12. A dummy-based approach for preserving source rate privacy </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TIFS.2016.2515050" target="_blank">  <i class="fas fa-university"></i> </a>
@@ -382,7 +399,7 @@
 	<div class="publication"> 
 		<div>
 			<div class="paper-title">
-				<b> 12. DT-MAC: An Efficient and Scalable Medium Access Control Protocol for Wireless Networks </b>
+				<b> 13. DT-MAC: An Efficient and Scalable Medium Access Control Protocol for Wireless Networks </b>
 			</div>
 			<div class="paper-icon">
 				<a href="https://doi.org/10.1109/TWC.2012.010913.120698" target="_blank">  <i class="fas fa-university"></i> </a>
