--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -193,20 +193,7 @@
               </div>
             </li>
 
-            <li class="table-row table-row-quiz">
-                <div class="col col-1" data-label="Event">Quiz</div>
-                <div class="col col-1-2" data-label="Date">
-                    2023-02-26
-                    <br class="date-spliter"/>February
-                </div>
-                <div class="col col-2" data-label="Description">
-                    Quiz 1 
-                    <br />
-                </div>
-                <div class="col col-4" data-label="Course Material">
-                    [<a href="/pecs2023/static_files/quiz/Q1.pdf">Quiz_1</a>]
-                </div>
-            </li>
+            
 
             <li class="table-row table-row-assignment">
                 <div class="col col-1" data-label="Event">Homework</div>
@@ -222,6 +209,22 @@
                     [<a href="/pecs2023/static_files/homework/HW1.pdf">HW1</a>]
                 </div>
             </li>	
+
+            <li class="table-row table-row-quiz">
+                <div class="col col-1" data-label="Event">Quiz</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-02-26
+                    <br class="date-spliter"/>February
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Quiz 1 
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/quiz/Q1.pdf">Quiz1</a>]
+                    [<a href="/pecs2023/static_files/quiz/Q1-Sol.pdf">Quiz1 Solution</a>]
+                </div>
+            </li>
 
 
             <li class="table-row table-row-lecture">
