--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -222,7 +222,7 @@
                 </div>
                 <div class="col col-4" data-label="Course Material">
                     [<a href="/pecs2023/static_files/quiz/Q1.pdf">Quiz1</a>]
-                    [<a href="/pecs2023/static_files/quiz/Q1-Sol.pdf">Quiz1 Solution</a>]
+                   <!-- [<a href="/pecs2023/static_files/quiz/Q1-Sol.pdf">Quiz1 Solution</a>]-->
                 </div>
             </li>
 
