--- a/pecs2023/schedule/index.html
+++ b/pecs2023/schedule/index.html
@@ -214,7 +214,7 @@
                 <div class="col col-1" data-label="Event">Quiz</div>
                 <div class="col col-1-2" data-label="Date">
                     2023-02-26
-                    <br class="date-spliter"/>February
+                    <br class="date-spliter"/>Sunday
                 </div>
                 <div class="col col-2" data-label="Description">
                     Quiz 1 
@@ -230,7 +230,7 @@
                 <div class="col col-1" data-label="Event">Lecture2</div>
                 <div class="col col-1-2" data-label="Date">
                     2023-02-28
-                    <br class="date-spliter"/>Sunday
+                    <br class="date-spliter"/>Tuesday
                 </div>
                 <div class="col col-2" data-label="Description">
                     Reminder of Random Variables II
@@ -240,6 +240,50 @@
                     [<a href="/pecs2023/static_files/lectures/lect02-RV2.pdf">lect02-RV2</a>]
               </div>
             </li>
+
+            <li class="table-row table-row-quiz">
+                <div class="col col-1" data-label="Event">Quiz</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-03-05
+                    <br class="date-spliter"/>Saturday
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Quiz 2
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/quiz/Q2.pdf">Quiz2</a>]
+                </div>
+            </li>
+
+            <li class="table-row table-row-lecture">
+                <div class="col col-1" data-label="Event">Lecture3</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-03-7
+                    <br class="date-spliter"/>Tuesday
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Function of Random Variables-Derived Distributions
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+              </div>
+            </li>
+
+            <li class="table-row table-row-assignment">
+                <div class="col col-1" data-label="Event">Homework</div>
+                <div class="col col-1-2" data-label="Date">
+                    2023-03-07
+                    <br class="date-spliter"/>Tuesday
+                </div>
+                <div class="col col-2" data-label="Description">
+                    Homework 2
+                    <br />
+                </div>
+                <div class="col col-4" data-label="Course Material">
+                    [<a href="/pecs2023/static_files/homework/HW2.pdf">HW2</a>]
+                </div>
+            </li>	
 
 			<!--
               <li class="table-row table-row-assignment">
